--- a/src/modules/Onboarding/pages/ConfigureBeats/QRGenerator/QRGenerator.scss
+++ b/src/modules/Onboarding/pages/ConfigureBeats/QRGenerator/QRGenerator.scss
@@ -1,6 +1,6 @@
 .qrcode-container {
   text-align: center;
-  margin-top: 50px;
+  // margin-top: 50px;
 //   background-color: red;
   canvas{
     // width: 100% !important;
@@ -9,9 +9,4 @@
     // margin: 0 auto;
     // color: red !important;
   }
-}
-
-
-.qrcode-container {
-  margin-top: 20px;
 }
