--- a/src/shared/LoadingSpinner/LoadingSpinner.scss
+++ b/src/shared/LoadingSpinner/LoadingSpinner.scss
@@ -1,7 +1,11 @@
 #loading-spinner {
-  height: 100vh;
-  width: 100%;
-  // background-color: red;
+  background-color: rgba(255,255,255,0.8); 
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  z-index: 999;
   display: flex;
   align-items: center;
   justify-content: center;
