strong compiled error occurred along the way

--- a/src/sass/_abstract/_colors.scss
+++ b/src/sass/_abstract/_colors.scss
@@ -11,6 +11,7 @@
   --clr-dark-400: #36454f;
   --clr-dark-450: #1a1c1f;
   --clr-dark-500: #0b0a09;
+  --clr-dark-700: #131212;
 }
 
 .bg-dark-100 {
