dashboard ui completed

--- a/src/modules/Client/Client.scss
+++ b/src/modules/Client/Client.scss
@@ -1,5 +1,5 @@
-.fff{
-    // background: hsla(0, 0%, 100%, 1);
-    background: #ffffff;
-
+.layout {
+  height: 100vh;
+  min-height: 100vh;
+  width: 100%;
 }
