--- a/src/sass/_abstract/_colors.scss
+++ b/src/sass/_abstract/_colors.scss
@@ -5,6 +5,7 @@
   --clr-secondary-400: #544986;
   --clr-secondary-500: #32256e;
   --clr-secondary-600: #2a1f5c;
+  --clr-dark-50: #dadada;
   --clr-dark-100: #c1c1c1;
   --clr-dark-200: #9ba2a7;
   --clr-dark-300: #50555e;
@@ -20,6 +21,13 @@
 
 .text-dark-100 {
   color: var(--clr-dark-100);
+}
+.bg-dark-50 {
+  background-color: var(--clr-dark-50);
+}
+
+.text-dark-50 {
+  color: var(--clr-dark-50);
 }
 .bg-dark-200 {
   background-color: var(--clr-dark-200);
