--- a/src/sass/_abstract/_colors.scss
+++ b/src/sass/_abstract/_colors.scss
@@ -8,6 +8,7 @@
   --clr-dark-50: #dadada;
   --clr-dark-100: #c1c1c1;
   --clr-dark-200: #9ba2a7;
+  --clr-dark-250: #79716b;
   --clr-dark-300: #50555e;
   --clr-dark-400: #36454f;
   --clr-dark-450: #1a1c1f;
