--- a/src/sass/_abstract/_colors.scss
+++ b/src/sass/_abstract/_colors.scss
@@ -5,14 +5,17 @@
   --clr-secondary-400: #544986;
   --clr-secondary-500: #32256e;
   --clr-secondary-600: #2a1f5c;
+  --clr-secondary-700: #23203c; //hsla(246, 31%, 18%, 1);
   --clr-dark-50: #dadada;
   --clr-dark-100: #c1c1c1;
   --clr-dark-200: #9ba2a7;
   --clr-dark-250: #79716b;
+  --clr-dark-260: #656B76;
   --clr-dark-300: #50555e;
   --clr-dark-400: #36454f;
   --clr-dark-450: #1a1c1f;
   --clr-dark-500: #0b0a09;
+  --clr-dark-600: #14151a;
   --clr-dark-700: #131212;
 }
 
