settings: schedule shift

--- a/src/sass/_abstract/_colors.scss
+++ b/src/sass/_abstract/_colors.scss
@@ -1,5 +1,6 @@
 :root {
   /* COLORS */
+  --clr-primary-50: #CCE6E6;
   --clr-primary-500: #008080;
   --clr-secondary-50: #d6d3e2;
   --clr-secondary-400: #544986;
