--- a/src/sass/_abstract/_colors.scss
+++ b/src/sass/_abstract/_colors.scss
@@ -1,21 +1,22 @@
 :root {
   /* COLORS */
-  --clr-primary-50: #CCE6E6;
+  --clr-primary-50: #cce6e6;
+  --clr-primary-400: #2a9595;
   --clr-primary-500: #008080;
   --clr-secondary-50: #d6d3e2;
   --clr-secondary-400: #544986;
   --clr-secondary-500: #32256e;
   --clr-secondary-600: #2a1f5c;
   --clr-secondary-700: #23203c; //hsla(246, 31%, 18%, 1);
-  --clr-accent-200: #F9FAFA;
-  --clr-accent-300: #F6F7F9;
-  --clr-accent-500: #EBEDEF;
+  --clr-accent-200: #f9fafa;
+  --clr-accent-300: #f6f7f9;
+  --clr-accent-500: #ebedef;
   --clr-dark-50: #dadada;
-  --clr-dark-70: #C9CFD4;
+  --clr-dark-70: #c9cfd4;
   --clr-dark-100: #c1c1c1;
   --clr-dark-200: #9ba2a7;
   --clr-dark-250: #79716b;
-  --clr-dark-260: #656B76;
+  --clr-dark-260: #656b76;
   --clr-dark-300: #50555e;
   --clr-dark-350: #495969;
   --clr-dark-400: #36454f;
