--- a/src/sass/_components/_cards.scss
+++ b/src/sass/_components/_cards.scss
@@ -44,6 +44,35 @@ input[type="radio"][name="plan-option"] {
   }
 }
 
+.update-plan-options {
+  input[type="radio"][name="plan-option"] {
+    position: absolute;
+    visibility: hidden;
+    &:checked {
+      & + label {
+        color: white;
+        font-weight: 600;
+        display: flex;
+        align-items: center;
+        gap: 1em;
+        &::after{
+          content: "";
+          display: block;
+          width: 15px;
+          height: 15px;
+          background-image: url(../../images/icons/Icon-tick-white.svg);
+          background-size: contain;
+          background-position: center;
+          background-repeat: no-repeat;
+        }
+        //  border-radius: 10px;
+        //  padding: 1em;
+        //  margin-bottom: 0;
+      }
+    }
+  }
+}
+
 @include mixins.maxmq(426px) {
   .plan-option-card {
     overflow: hidden;
@@ -77,7 +106,7 @@ input[type="radio"][name="plan-option"] {
       color: #854d0e;
       background: #fef08a;
       border-radius: 100vmax;
-      padding: .3em .7em;
+      padding: 0.3em 0.7em;
       margin-left: 1em;
     }
   }
