--- a/src/sass/_abstract/_colors.scss
+++ b/src/sass/_abstract/_colors.scss
@@ -11,6 +11,7 @@
   --clr-accent-200: #f9fafa;
   --clr-accent-300: #f6f7f9;
   --clr-accent-500: #ebedef;
+  --clr-accent-550: #DDE1E9;
   --clr-dark-50: #dadada;
   --clr-dark-70: #c9cfd4;
   --clr-dark-100: #c1c1c1;
