--- a/src/Emails/Templates/reset-password.html
+++ b/src/Emails/Templates/reset-password.html
@@ -89,7 +89,7 @@
                 Best regards,
                 <br />
                 <br />
-                Guardtrol Team
+                Stafftrol Team
               </p>
             </td>
           </tr>
