--- a/src/Emails/Templates/verify-account.html
+++ b/src/Emails/Templates/verify-account.html
@@ -68,7 +68,7 @@
                 Hey Martha,
                 <br />
                 <br />
-                Thanks for signing up on Guardtrol! This is the start of an
+                Thanks for signing up on Stafftrol! This is the start of an
                 exciting journey and we can't wait to see all the beautiful
                 designs you'll create with our templates.
               </p>
