--- a/src/Emails/Templates/transaction-receipt.html
+++ b/src/Emails/Templates/transaction-receipt.html
@@ -90,7 +90,7 @@
                 Best regards,
                 <br />
                 <br />
-                Guardtrol Team
+                Stafftrol Team
               </p>
             </td>
           </tr>
